envoyproxy/envoy.yaml
static_resources:
  clusters:
    - name: ratelimit_cluster
      type: STRICT_DNS
      connect_timeout: 1s
      lb_policy: ROUND_ROBIN
      protocol_selection: USE_CONFIGURED_PROTOCOL
      http2_protocol_options: {}
      load_assignment:
        cluster_name: ratelimit_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: ratelimit
                      port_value: 8081
    - name: httpbin_cluster
      connect_timeout: 1s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: httpbin_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: httpbin
                      port_value: 80
  listeners:
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 8888
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: AUTO
                stat_prefix: ingress
                access_log:
                  - name: envoy.access_loggers.stdout
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
                http_filters:
                  - name: envoy.filters.http.ratelimit
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.ratelimit.v3.RateLimit
                      domain: rl
                      # request_type: external
                      # stage: 0
                      # rate_limited_as_resource_exhausted: true
                      failure_mode_deny: true
                      # enable_x_ratelimit_headers: DRAFT_VERSION_03
                      rate_limit_service:
                        grpc_service:
                          envoy_grpc:
                            cluster_name: ratelimit_cluster
                        transport_api_version: V3
                      timeout: 1s
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                route_config:
                  name: route
                  virtual_hosts:
                    - name: backend
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: /test
                          route:
                            cluster: httpbin_cluster
                            prefix_rewrite: "/anything" # Rewrite it to be this since it is a valid path by httpbin
                            rate_limits:
                              - actions:
                                  - source_cluster: {} # This action's value is populated by the "service-cluster" arg passed in when starting Envoy. In this example, it's "proxy" (see docker-compose.yml)
                                  - destination_cluster: {} # This action's value is populated by the value set in the above egress "cluster" field -- "httpbin_cluster"
                        - match:
                            prefix: /header
                          route:
                            cluster: httpbin_cluster
                            prefix_rewrite: "/anything"
                            rate_limits:
                              - actions:
                                  - request_headers:
                                      header_name: "foo"
                                      descriptor_key: "foo"
                        - match:
                            prefix: /twoheader
                          route:
                            cluster: httpbin_cluster
                            prefix_rewrite: "/anything"
                            rate_limits:
                              - actions:
                                  - request_headers:
                                      header_name: "foo"
                                      descriptor_key: "foo"
                                  - request_headers:
                                      header_name: "bar"
                                      descriptor_key: "bar"
                              - actions:
                                  - request_headers:
                                      header_name: "foo"
                                      descriptor_key: "foo"
                                  - request_headers:
                                      header_name: "baz"
                                      descriptor_key: "baz"
                        - match:
                            prefix: /fourheader
                          route:
                            cluster: httpbin_cluster
                            prefix_rewrite: "/anything"
                            rate_limits:
                              - actions:
                                  - request_headers:
                                      header_name: "foo"
                                      descriptor_key: "foo"
                                  - request_headers:
                                      header_name: "bar"
                                      descriptor_key: "bar"
                              - actions:
                                  - request_headers:
                                      header_name: "source_cluster"
                                      descriptor_key: "source_cluster"
                                  - request_headers:
                                      header_name: "destination_cluster"
                                      descriptor_key: "destination_cluster"
                        - match:
                            prefix: /fiveheader
                          route:
                            cluster: httpbin_cluster
                            prefix_rewrite: "/anything"
                            rate_limits:
                              - actions:
                                  - request_headers:
                                      header_name: "foo"
                                      descriptor_key: "foo"
                                  - request_headers:
                                      header_name: "bar"
                                      descriptor_key: "bar"
                              - actions:
                                  - request_headers:
                                      header_name: "source_cluster"
                                      descriptor_key: "source_cluster"
                                  - request_headers:
                                      header_name: "destination_cluster"
                                      descriptor_key: "destination_cluster"
                              - actions:
                                  - request_headers:
                                      header_name: "category"
                                      descriptor_key: "category"
                        - match:
                            prefix: /unspec
                          route:
                            cluster: httpbin_cluster
                            prefix_rewrite: "/anything"
                            rate_limits:
                              - actions:
                                  - request_headers:
                                      header_name: "unspec"
                                      descriptor_key: "unspec"

admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
